crates/reinhardt-pages/tests/ui/client_form/choices/fail/data_variant.stderr
error: ClientFormChoices supports fieldless enum variants only
 --> tests/ui/client_form/choices/fail/data_variant.rs:7:2
  |
7 |     Live { endpoint: String },
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
